@@ -106,9 +106,6 @@ SHLIB_CXX14LDFLAGS = @SHLIB_CXX14LDFLAGS@
 SHLIB_CXX17LD = @SHLIB_CXX17LD@
 SHLIB_CXX17LDFLAGS = @SHLIB_CXX17LDFLAGS@
 SHLIB_EXT = @SHLIB_EXT@
-## no longer used by R as of 3.6.0 but exported by R CMD config
-SHLIB_FCLD = @SHLIB_FCLD@
-SHLIB_FCLDFLAGS = @SHLIB_FCLDFLAGS@
 SHLIB_FFLAGS = @SHLIB_FFLAGS@
 SHLIB_LD = @SHLIB_LD@
 SHLIB_LDFLAGS = @SHLIB_LDFLAGS@@BUILD_LTO_TRUE@ $(CFLAGS) $(CPICFLAGS)
@@ -118,7 +115,6 @@ SHLIB_LIBADD = @SHLIB_LIBADD@
 SHLIB_LINK = $(SHLIB_LD) $(SHLIB_LDFLAGS) $(LIBR0) $(LDFLAGS)
 SHLIB_OPENMP_CFLAGS = @SHLIB_OPENMP_CFLAGS@
 SHLIB_OPENMP_CXXFLAGS = @SHLIB_OPENMP_CXXFLAGS@
-SHLIB_OPENMP_FCFLAGS = @SHLIB_OPENMP_FCFLAGS@
 SHLIB_OPENMP_FFLAGS = @SHLIB_OPENMP_FFLAGS@
 STRIP_LIBS = @striplib@
 STRIP_STATIC_LIBS = @stripstaticlib@
@@ -127,11 +123,15 @@ TCLTK_LIBS = @TCLTK_LIBS@
 YACC = @YACC@
 
 ## Legacy settings
-## set FC before F77 as on Solaris make, setting FC sets F77
+## no longer used by R as of 3.6.0 but some are exported by R CMD config
+## on Solaris make, setting FC sets F77
 F77 = @FC@
 FCPICFLAGS = @FPICFLAGS@
 F77_VISIBILITY = @F_VISIBILITY@
 FC_VISIBILITY = @F_VISIBILITY@
+SHLIB_FCLD = @SHLIB_FCLD@
+SHLIB_FCLDFLAGS = @SHLIB_FCLDFLAGS@
+SHLIB_OPENMP_FCFLAGS = @SHLIB_OPENMP_FFLAGS@
 
 
 ## for linking to libR.a
